# src/libs/ia-call-api/model/callUpdate.ts
@@ -1,0 +1,23 @@
+/**
+ * ORISOD Enzyme® Voice Assistant API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { InteractionLog } from './interactionLog';
+
+
+/**
+ * Schema for updating a call.
+ */
+export interface CallUpdate { 
+    interaction_log?: Array<InteractionLog> | null;
+    status?: string | null;
+    duration?: number | null;
+    user_intent?: string | null;
+}
+
+
