# src/libs/ia-call-api/model/models.ts
@@ -1,3 +1,6 @@
+export * from './callRequest';
+export * from './callUpdate';
 export * from './hTTPValidationError';
+export * from './interactionLog';
 export * from './validationError';
 export * from './validationErrorLocInner';
